--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
+body{
+  /* background-color: #111; */
+}
 header{
   padding:1rem 2rem;
 
