--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,16 @@
   font-family: "Poppins", sans-serif;
 }
 body{
-  /* background-color: #111; */
+  width: 100%;
+  height: 100vh;
+background-image: linear-gradient(to left, #021f342d, #ed0b713f), url('https://scitechdaily.com/images/Vast-Universe-Concept.gif');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+color: #ddd;
 }
 header{
-  padding:1rem 2rem;
+  padding:1rem;
 
 }
 footer{
