--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body{
+
+body {
   width: 100%;
   height: 100vh;
-background-image: linear-gradient(to left, #021f342d, #ed0b713f), url('https://scitechdaily.com/images/Vast-Universe-Concept.gif');
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
-color: #ddd;
+  background-image: linear-gradient(to left, #021f342d, #ed0b713f), url('https://scitechdaily.com/images/Vast-Universe-Concept.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #ddd;
 }
-header{
-  padding:1rem;
+
+header {
+  padding: 1rem;
 
 }
-footer{
+
+header .logo {
+  background-image: linear-gradient(to right, dodgerblue, purple);
+  width: 120px;
+  text-align: center;
+  border-radius: 25px;
+  padding: .5rem;
+  cursor: pointer;
+  transition: background-image .5s ease-in-out;
+}
+
+header .logo:hover {
+  background-image: linear-gradient(to left, dodgerblue, purple);
+
+}
+
+footer {
   padding: 2rem;
   font-size: 14px;
   text-align: center;
