--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-  padding: 2rem;
+  padding: 1rem 2rem;
   background-color: #ba8d34;
   color: #fff;
     box-shadow: 4px 4px 510px #00000073;
