--- a/src/css/cosmic.css
+++ b/src/css/cosmic.css
@@ -27,17 +27,51 @@ font-size: 14px;
 border-bottom: 1px solid #ddd;
 }
 .cosmic-info b{
-    margin-right: 1rem;
+    margin-right: .25rem;
+    color: #ba8d34;
 }
+.reading{
+    padding: 1rem 0;
+}
+.reading p{
+    margin: .5rem 0;
+    font-size: 14px;
 
+}
+.reading b{
+    margin-right: .25rem;
+    color: #ba8d34;
+}
 .cosmic ul{
     padding:0.5rem 1rem;
     font-size: 14px;
+}
+.cosmic .btn-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.cosmic button{
+    width: 120px;
+    height: 50px;
+    border-radius: 4px;
+    background-color: #ba8d34;
+    color: #fff;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width:768px) {
     .cosmic {
         width: 90%;
         padding: 2rem;
+    }
+    .cosmic .btn-box{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .cosmic button{
+        width: 100%;
     }
 }
