--- a/src/css/cosmic.css
+++ b/src/css/cosmic.css
@@ -62,6 +62,18 @@ border-bottom: 1px solid #ddd;
     cursor: pointer;
 }
 
+
+/* //  */
+/* Force page break */
+.page-break {
+  page-break-before: always;
+}
+
+/* Prevent cutting */
+.avoid-break {
+  page-break-inside: avoid;
+}
+
 @media screen and (max-width:768px) {
     .cosmic {
         width: 90%;
